inisialisasi projek form survey

--- a/index.html
+++ b/index.html
@@ -258,6 +258,14 @@
       <input id="nomor_sk" class="border-b border-black w-40 mx-1 mb-1" />
     </div>
 
+    <div class="mb-3">
+      <span class="inline-block w-44">Kantor Pengelola</span>:
+      <input
+        id="kantor_pengelola"
+        class="border-b border-black w-40 mx-1 mb-1"
+      />
+    </div>
+
     <!-- Administrasi -->
     <div class="mb-2">
       <span class="inline-block w-44">AD/ART</span>:
@@ -564,6 +572,7 @@
           ["Nama Pengelola", v("nama_pengelola")],
           ["Nomor Telp", v("nomor_telp")],
           ["Nomor SK Pengelola", v("nomor_sk")],
+          ["Kantor Pengelola", v("Kantor_pengelola")],
           [],
           ["AD/ART", `${c("adart_ada")} Ada`, `${c("adart_tidak")} Tidak Ada`],
 
