inisialisasi projek form survey

--- a/index.html
+++ b/index.html
@@ -538,13 +538,15 @@
           ["", `${c("dana_lainnya")} Lainnya`, ""],
           [],
           [
-            [
-              "Jumlah Sambungan Rumah :",
-              "Dengan Water Meter :",
-              v("sr_dengan_meter"),
-              "SR;",
-            ],
-            ["", "Tanpa Water Meter :", v("sr_tanpa_meter"), "SR;"],
+            "Jumlah Sambungan Rumah :",
+            "Dengan Water Meter :",
+            v("sr_dengan_meter"),
+            "SR;",
+
+            "",
+            "Tanpa Water Meter :",
+            v("sr_tanpa_meter"),
+            "SR;",
           ],
           [],
           ["Jumlah Hidran Umum", v("jumlah_hidran"), "Unit"],
