--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="flex items-center">
         <span class="w-48">Dengan Water Meter :</span>
         <input id="sr_dengan_meter" class="border-b border-black w-24 mx-2" />
-        <span>SR;</span>
+        <span>SR</span>
       </div>
 
       <!-- Kosong biar sejajar -->
@@ -153,7 +153,7 @@
       <div class="flex items-center">
         <span class="w-48">Tanpa Water Meter :</span>
         <input id="sr_tanpa_meter" class="border-b border-black w-24 mx-2" />
-        <span>SR;</span>
+        <span>SR</span>
       </div>
     </div>
 
@@ -538,16 +538,12 @@
           ["", `${c("dana_lainnya")} Lainnya`, ""],
           [],
           [
-            "Jumlah Sambungan Rumah :",
-            "Dengan Water Meter :",
+            "Jumlah Sambungan Rumah",
+            "Dengan Water Meter",
             v("sr_dengan_meter"),
             "SR;",
-
-            "",
-            "Tanpa Water Meter :",
-            v("sr_tanpa_meter"),
-            "SR;",
           ],
+          ["", "Tanpa Water Meter", v("sr_tanpa_meter"), "SR;"],
           [],
           ["Jumlah Hidran Umum", v("jumlah_hidran"), "Unit"],
           [],
@@ -587,7 +583,7 @@
           ["Nama Pengelola", v("nama_pengelola")],
           ["Nomor Telp", v("nomor_telp")],
           ["Nomor SK Pengelola", v("nomor_sk")],
-          ["Kantor Pengelola", v("Kantor_pengelola")],
+          ["Kantor Pengelola", v("kantor_pengelola")],
           [],
           ["AD/ART", `${c("adart_ada")} Ada`, `${c("adart_tidak")} Tidak Ada`],
 
