inisialisasi projek form survey

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
       <div class="flex items-center">
         <span class="w-48">Dengan Water Meter :</span>
         <input id="sr_dengan_meter" class="border-b border-black w-24 mx-2" />
-        <span>SR</span>
+        <span>SR;</span>
       </div>
 
       <!-- Kosong biar sejajar -->
@@ -153,7 +153,7 @@
       <div class="flex items-center">
         <span class="w-48">Tanpa Water Meter :</span>
         <input id="sr_tanpa_meter" class="border-b border-black w-24 mx-2" />
-        <span>SR</span>
+        <span>SR;</span>
       </div>
     </div>
 
