inisialisasi projek form survey

--- a/index.html
+++ b/index.html
@@ -521,13 +521,9 @@
           [],
           [
             "Lokasi Pembangunan",
-            "Kp.",
-            v("lokasi_pembangunan"),
+            `Kp. ${v("lokasi_pembangunan")}`,
             "",
-            "RT",
-            v("rt"),
-            "RW",
-            v("rw"),
+            `RT. ${v("rt")} | RW. ${v("rw")} `,
           ],
           ["Koordinat", "X", v("koordinat_x"), "", "Y", v("koordinat_y"), ""],
           ["Tahun Pembangunan", v("tahun_pembangunan")],
